# otp

./: .gitignore  LICENSE  README.md  otp.cabal
app/: Main.hs
src/Data/: OTP.hs
