name:                otp
version:             0.1.0
synopsis:            Generate RFC 6238 time-based one-time passwords
description:         Please see README.md
homepage:            https://github.com/hakujin/otp#readme
license:             BSD3
license-file:        LICENSE
author:              Colin King
maintainer:          richard.colin.king@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.OTP
  ghc-options:         -O2 -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cereal
                     , cryptonite
                     , memory
                     , time
  default-language:    Haskell2010

executable otp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -Werror
  build-depends:       base
                     , otp
                     , bytestring
                     , optparse-applicative
                     , sandi
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hakujin/otp
